# exercise_mlops_api_containerization

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  docker-compose.yml  pyproject.toml  tasks.py
charts/course-mlops/: Chart.yaml  values.yaml
charts/course-mlops/templates/: api.yaml  mlflow.yaml  pvc.yaml
config/: config.yaml
data/: spam.csv
notebook/: gud_luck.ipynb
notebook/models/: model.pkl  scaler.pkl  vectorizer.pkl
src/: __main__.py  exceptions.py  utils.py
src/api/: config.py  dal.py  exception_handlers.py  main.py  models.py  routes.py
src/train/: config.py  data.py  evaluation.py  features.py  model.py  train.py
