[project]
name = "course-mlops"
version = "0.2.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.7"
dependencies = [
    "fastapi>=0.128.0",
    "ipykernel>=7.1.0",
    "mlflow>=3.8.1",
    "nbformat>=5.10.4",
    "numpy>=2.4.1",
    "pandas>=2.3.3",
    "plotly>=6.5.1",
    "pydantic>=2.12.5",
    "scikit-learn>=1.8.0",
    "scipy>=1.16.3",
    "typer>=0.15.0",
    "xgboost>=3.1.3",
]

[dependency-groups]
dev = [
    "commitizen>=4.11.0",
    "httpx>=0.27.0",
    "invoke>=2.2.1",
    "pre-commit>=4.5.1",
    "pytest>=8.3.0",
    "pytest-cov>=6.0.0",
]

[tool.ruff]
line-length = 120
target-version = "py312"
exclude = [
    "notebook/",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "DTZ",    # flake8-datetimez
    "T10",    # flake8-debugger
    "EXE",    # flake8-executable
    "ISC",    # flake8-implicit-str-concat
    "PIE",    # flake8-pie
    "PT",     # flake8-pytest-style
    "Q",      # flake8-quotes
    "RSE",    # flake8-raise
    "RET",    # flake8-return
    "SIM",    # flake8-simplify
    "PTH",    # flake8-use-pathlib
    "PL",     # pylint
    "RUF",    # ruff-specific rules
]
ignore = [
    "ISC001",   # Conflicts with formatter
    "N803",     # Argument name should be lowercase (ML convention: X, y, X_train, etc.)
    "N806",     # Variable in function should be lowercase (ML convention)
    "PLR0915",  # Too many statements (training functions are complex)
    "PLR0913",  # Too many arguments (common in ML)
    "PLR2004",  # Magic value used in comparison
    "PTH123",   # `open()` should use Path.open() (acceptable for simple operations)
    "SIM108",   # Use ternary operator (style preference)
]

[tool.ruff.lint.isort]
force-single-line = true

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = [
    "notebook/",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--cov=src",
    "--cov-report=term-missing",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$major.$minor.$patch"
version_scheme = "semver"
version_provider = "pep621"
update_changelog_on_bump = true
